# BazelProjAssertionsSample

./: BUILD.bazel  MODULE.bazel  README.md
test/: FooTests.swift
