load("@build_bazel_rules_swift//swift:swift.bzl", "swift_test")
load(
    "@rules_xcodeproj//xcodeproj:defs.bzl",
    "top_level_target",
    "xcodeproj",
)

xcodeproj(
    name = "xcodeproj",
    project_name = "App",
    tags = ["manual"],
    top_level_targets = [
        ":Tests",
    ],
)

swift_test(
    name = "Tests",
    srcs = glob(["test/*.swift"]),
    visibility = ["//visibility:public"],
)